# ogs-board-game-constructor

./: .gitignore  gen
api/: core.PropertiesMT.lua  core.Reporter.lua  main.application.camera.clearColor.lua  main.application.camera.lua  main.application.camera.position.lua  main.application.camera.rotation.lua  main.application.materialPool.createMaterial.lua  main.application.materialPool.createMaterialCopy.lua  main.application.materialPool.lua  main.application.materialPool.material.lua  main.application.mouse.lua  main.application.nodePool.createNode.lua  main.application.nodePool.createSphere.lua  main.application.nodePool.lua  main.application.nodePool.node.lua  main.application.resourcePool.lua  main.application.resourcePool.resource.lua  render.Material.lua  render.Material.setShaders.lua  render.Material.setUniform.lua  resource.Resource.lua  scene.Node.addChild.lua  scene.Node.lua  scene.Node.position.lua  scene.Node.rotation.lua  scene.Node.setMaterial.lua
api/src/: api.lua
app/main/: Application+MaterialPool.cpp  Application+NodePool.cpp  Application+ResourcePool.cpp  Example+1.0.0.cpp  Example+KVC+application.camera.clearColor.cpp  Example+KVC+application.camera.position.cpp  Example+KVC+application.camera.rotation.cpp  Example+KVC+application.materialPool.createMaterial.cpp  Example+KVC+application.materialPool.material.exists.cpp  Example+KVC+application.materialPool.material.setShaders.cpp  Example+KVC+application.materialPool.material.setUniform.cpp  Example+KVC+application.mouse.cpp  Example+KVC+application.nodePool.createNode.cpp  Example+KVC+application.nodePool.createSphere.cpp  Example+KVC.cpp  NodePool+Root.cpp  (+17 more)
dat/: index.lua  single-color.vert
tools/: simple-cors-http-server.py
ver/: rebuild
ver/1.0.0/desktop/: CMakeLists.txt
ver/1.0.0/desktop/src/: Features.txt  core.h  format.h  main.cpp  main.h  render.h  resource.h  scene.h
ver/1.0.0/web/: CMakeLists.txt
ver/1.0.0/web/src/: Features.txt  format.h  input.h  log.h  main.cpp  main.h  network.h  render.h  resource.h  scene.h  script.h
(+29 files in other folders)
